# ember

./: .clang-format  .gitignore  CMakeLists.txt
data/shaders/: anyhit.rahit  anyhit_ref.rahit  ao_prefilter.comp  bindless.frag  bindless.vert  bloom_downsample.comp  bloom_upsample.comp  brdf_lut.comp  closesthit.rchit  closesthit_ref.rchit  common.glsl  common_geometry.glsl  common_post_process.glsl  composite.comp  cull.comp  cull_meshlets.comp  cull_skinned.comp  ddgi_blend.glsl  ddgi_blend_depth.comp  ddgi_blend_irradiance.comp  ddgi_border.comp  ddgi_classify.comp  ddgi_common.glsl  ddgi_conv.comp  ddgi_irradiance.comp  ddgi_relocate.comp  ddgi_sample.glsl  ddgi_trace.comp  ddgi_trace_ray.comp  debug.frag  debug.vert  debug_line.frag  debug_line.vert  dispatch_clear.comp  frag.frag  fxaa.comp  hi_z.comp  ibl_irradiance.comp  ibl_specular.comp  light.comp  (+39 more)
src/: args.hpp  asset.cpp  asset.hpp  asset_exporter.cpp  asset_exporter.hpp  asset_importer.cpp  asset_importer.hpp  asset_registry.cpp  asset_registry.hpp  camera.cpp  camera.hpp  component_registry.cpp  component_registry.hpp  components.hpp  cvars.cpp  cvars.hpp  device.cpp  device.hpp  editor.cpp  editor.hpp  embedded.cpp  embedded.hpp  ember.cpp  ember.hpp  framegraph.cpp  framegraph.hpp  geometry.cpp  geometry.hpp  implementations.cpp  input_system.cpp  input_system.hpp  main.cpp  particle_editor.cpp  particle_editor.hpp  particle_effect.cpp  particle_effect.hpp  physics.cpp  physics.hpp  pipeline.cpp  pipeline.hpp  (+24 more)
